--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<jjwt.version>0.7.0</jjwt.version>
 	</properties>
 
 	<dependencies>
@@ -61,7 +62,7 @@
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
-			<version>0.7.0</version>
+			<version>${jjwt.version}</version>
 		</dependency>
 
 
